--- a/src/management_system/templates/management_system/protocols.html
+++ b/src/management_system/templates/management_system/protocols.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %}
-
+{% load bootstrap_icons %}
 
 {% block content %}
 
@@ -12,22 +12,25 @@
     <input id="created-date" type="date" placeholder="Wybierz datę utworzenia...">
     <button id="search-date-range-button" type="button">Szukaj</button>
     <button id="clear-filters-button" type="button">Wyczyść filtry</button>
+    <br>
 
-    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    <button class="btn btn-primary mt-2 mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
     Zaawansowane
   </button>
 
 
 <div class="collapse" id="collapseExample">
   <div class="card card-body">
-
+  
+        <b>Zakres dat:</b>
       <div id="date-range-inputs">
+      
         <input id="start-date" type="date" placeholder="Wybierz datę początkową..."> do
         <input id="end-date" type="date" placeholder="Wybierz datę końcową...">
       </div>
 
 
-      <div class="form-check">
+      <div class="form-check mt-3">
           <input class="form-check-input" type="radio" name="return-option" id="flexRadioDefault1" value='true'>
           <label class="form-check-label" for="flexRadioDefault1">
             Zwrot
@@ -61,6 +64,8 @@
     <tbody id="data"> </tbody>
 
     </table>
+
+
 <div class="card-footer text-end p-3">
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center" id="pagination">
@@ -85,7 +90,6 @@
     const page_size = 20;
     let page_no = 0;
     let count = -1;
-    let employeeIdToDelete = null;
 
     document.addEventListener('DOMContentLoaded', () => {
         page(0);
@@ -171,20 +175,18 @@
           const createdDate = new Date(protocol.created);
           
            if (protocol.is_scanned) {
-            iconHTML = `<font color="green" data-bs-toggle="tooltip" data-bs-placement="top" title="Skan został dostarczony">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16"><path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z"/></svg>
-                    </font>`
+            iconHTML = `<font color="red" data-bs-toggle="tooltip" data-bs-placement="top" title="Protokół zeskanowany">{% bs_icon 'check-lg' size='1.2em' color='green'%}</font>`
            }
           else if (protocol.printed_count === 0) {
-            iconHTML = `<font color="blue" data-bs-toggle="tooltip" data-bs-placement="top" title="Dokument nie zostal wydrukowany">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer-fill" viewBox="0 0 16 16"><path d="M5 1a2 2 0 0 0-2 2v1h10V3a2 2 0 0 0-2-2zm6 8H5a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1"/><path d="M0 7a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-1v-2a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v2H2a2 2 0 0 1-2-2zm2.5 1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"/></svg>
-                </font>`
+            iconHTML = `<font color="red" data-bs-toggle="tooltip" data-bs-placement="top" title="Protokół nie został wydrukowany">{% bs_icon 'printer-fill' size='1.2em' color='blue'%}</font>`
           }
           else{
-            iconHTML = `<font color="red" data-bs-toggle="tooltip" data-bs-placement="top" title="Skan nie zostal dostarczony">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16"><path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/><path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/></svg>
-              </font>`
+            iconHTML = `<font color="red" data-bs-toggle="tooltip" data-bs-placement="top" title="Skan nie został dostarczony">{% bs_icon 'exclamation-triangle-fill' size='1.2em' color='red'%}</font>`
           }
+
+
+  
+
             data.innerHTML += `
             <tr class="fw-normal">
                 <td style="width: 1em;">
