--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -5,7 +5,9 @@
 <h2>Sprzęt</h2>
 <hr />
     <input id="search" class='mb-2' type="text" placeholder="Szukaj sprzętu..." value="{{ search_value }}">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.2/font/bootstrap-icons.min.css">
+    <button id="search-date-range-button" type="button">Szukaj</button>
+    <button id="clear-filters-button" type="button">Wyczyść filtry</button>
+    <br>
 
     <button class="btn btn-primary mt-2 mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
     Zaawansowane
@@ -15,25 +17,25 @@
 
 <div class="collapse" id="collapseExample">
   <div class="card card-body">
-  
-        <b>Zakres dat:</b>
-      <div id="date-range-inputs">
-      
-        <input id="start-date" type="date" placeholder="Wybierz datę początkową..."> do
-        <input id="end-date" type="date" placeholder="Wybierz datę końcową...">
-      </div>
 
 
-      <div class="form-check mt-3">
-          <input class="form-check-input" type="radio" name="return-option" id="flexRadioDefault1" value='true'>
+
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="item-option" id="flexRadioDefault1" value='true'>
           <label class="form-check-label" for="flexRadioDefault1">
-            Zwrot
+            Używane
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="return-option" id="flexRadioDefault2" value='false'>
+          <input class="form-check-input" type="radio" name="item-option" id="flexRadioDefault2" value='false'>
           <label class="form-check-label" for="flexRadioDefault2">
-            Przekazanie
+            Wolne
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="item-option" id="flexRadioDefault3" value='utilized'>
+          <label class="form-check-label" for="flexRadioDefault3">
+            Utylizacja
           </label>
         </div>
 
@@ -152,6 +154,24 @@
             }
         });
 
+        document.getElementById('search-date-range-button').addEventListener('click', function() {
+            page(0); // Call page(0) to reload data
+        });
+
+        document.getElementById('clear-filters-button').addEventListener('click', function() {
+            // Clear all input fields
+            document.getElementById('search').value = '';
+
+            document.getElementById('flexRadioDefault1').checked = false; // Assuming you want to reset to the first radio button
+            document.getElementById('flexRadioDefault2').checked = false;
+            document.getElementById('flexRadioDefault3').checked = false;
+    
+
+            // Call page(0) to reload data
+            page(0);
+        });
+
+
     });
 
     async function page(p) {
@@ -170,8 +190,28 @@
         };
 
         let search = document.getElementById('search').value;
+        let selectedOption = document.querySelector('input[name="item-option"]:checked');
 
         if (search) params["search"] = search;
+        if (selectedOption) {
+            // If an option is checked, include the selected value as parameter
+            {% comment %} params["is_return"] = selectedOption.value === "true"; {% endcomment %}
+            switch (selectedOption.value) {
+            case 'true':
+                params["item_user"]="false";
+                break;
+            case 'false':
+                params["item_user"]="true";
+                break;
+            case 'utilized':
+                params["utilization_id"]="false";
+                break;
+            default:
+                // No need to set or delete anything
+                break;
+        }
+        } 
+
 
         let response = await fetch("{% url 'item-list' %}?" + new URLSearchParams(params).toString());
         let result = await response.json();
