fixed item searching not used displayed also in utilizaiton

--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -202,6 +202,7 @@
                 break;
             case 'false':
                 params["item_user"]="true";
+                params["utilization_id"]="true";
                 break;
             case 'utilized':
                 params["utilization_id"]="false";
